# cursor-db

./: .gitignore  Cargo.toml  README.md
src/: binary.rs  cursor.rs  lib.rs  main.rs  trade.rs  trade.txt  utils.rs
utils/: binance_to_trade.py  dydx_trade_history.py
